--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "private": true,
+  "scripts": {
+    "prod": "gulp --production",
+    "dev": "gulp watch"
+  },
   "devDependencies": {
     "babel": "^6.5.2",
-    "bootstrap-sass": "^3.3.5",
     "css-loader": "^0.23.0",
     "browser-sync": "^2.13.0",
-    "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.0.10",
     "gulp-compass": "^2.1.0",
@@ -31,11 +33,15 @@
     "react": "^15.1.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.1"
-  },
-  "dependencies": {
-    "autoprefixer": "^6.3.7",
-    "bootstrap-sass": "^3.0.0",
-    "laravel-elixir": "^4.0.0"
+    "webpack": "^1.13.1",
+    "bootstrap-sass": "^3.3.7",
+    "gulp": "^3.9.1",
+    "jquery": "^3.1.0",
+    "laravel-elixir": "^6.0.0-9",
+    "laravel-elixir-vue": "^0.1.4",
+    "laravel-elixir-webpack-official": "^1.0.2",
+    "lodash": "^4.14.0",
+    "vue": "^1.0.26",
+    "vue-resource": "^0.9.3"
   }
 }
